vlib/v/checker/tests/generic_fn_call_arg_mismatch_err.vv
import strings

fn my_fn[T]() {
	mut b := strings.new_builder(16)
	var := T{}
	ptr := &var
	b.write_string(*ptr)
}

fn main() {
	my_fn[int]()
}
